<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:src="@mipmap/lunbofirst"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/card"
            android:paddingLeft="43dp"
            android:paddingRight="31dp"
            android:layout_marginTop="278dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/account"/>
                <EditText
                    android:id="@+id/edit_id_Num"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"
                    android:textColorHint="#bcbcbc"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:background="@null"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e8e7e7"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/key"/>
                <EditText
                    android:id="@+id/edit_Password"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:textColorHint="#bcbcbc"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:background="@null"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e8e7e7"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ic_name"/>
                <EditText
                    android:id="@+id/edit_Name"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:textColorHint="#bcbcbc"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:background="@null"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e8e7e7"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="67dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/login_button_shape_3"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>